# fastapi-pretty-errors

./: README.md  pyproject.toml
.github/workflows/: publish.yaml
fastapi_pretty_errors/: __init__.py  middleware.py
tests/: test_middleware.py
