[tool.poetry]
name = "fastapi-pretty-errors"
version = "0.1.1"
description = "A FastAPI middleware to prettify exceptions using PrettyErrors."
authors = ["Hiroki Sawano <hiroki.sawano.2512@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/savvan0h/fastapi-pretty-errors"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.87"
pretty-errors = "^1.2.25"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
uvicorn = "^0.31.1"
httpx = "^0.27.2"
ruff = "^0.6.9"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_any_generics = true
allow_untyped_defs = true
exclude = ["venv", ".venv"]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "ARG001",
]
ignore = [
    "E501",
    "B008",
    "W191",
    "B904",
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true
